[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/Magnet.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/measurementAreas/Loop.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://ui/DefaultUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/measurementAreas/Square.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/SimpleUI.tscn" type="PackedScene" id=6]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 1, 1, 1, 1 )

[node name="Main" type="Spatial"]
script = ExtResource( 3 )

[node name="MagnetRotate" type="Spatial" parent="."]

[node name="Magnet" parent="MagnetRotate" instance=ExtResource( 1 )]

[node name="Loop" parent="MagnetRotate/Magnet" instance=ExtResource( 2 )]

[node name="Square" parent="MagnetRotate/Magnet" instance=ExtResource( 5 )]
visible = false

[node name="TweenMagnet" type="Tween" parent="MagnetRotate"]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0.5, 2.5 )
far = 10.0

[node name="Tween" type="Tween" parent="Camera"]

[node name="DefaultUI" parent="." instance=ExtResource( 4 )]

[node name="SimpleUI" parent="." instance=ExtResource( 6 )]
visible = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[connection signal="change_area_size" from="DefaultUI" to="." method="_on_UI_change_area_size"]
[connection signal="change_area_type" from="DefaultUI" to="." method="_on_UI_change_area_type"]
[connection signal="change_field_strength" from="DefaultUI" to="." method="_on_UI_change_field_strength"]
[connection signal="mouse_moved" from="DefaultUI" to="." method="_on_UI_mouse_moved"]
[connection signal="reset_mouse_target" from="DefaultUI" to="." method="_on_UI_reset_mouse_target"]
[connection signal="reset_state" from="DefaultUI" to="." method="_on_UI_reset_state"]
[connection signal="rotate_area_to" from="DefaultUI" to="." method="_on_UI_rotate_area_to"]
[connection signal="update_mouse_target" from="DefaultUI" to="." method="_on_UI_update_mouse_target"]
[connection signal="zoom" from="DefaultUI" to="." method="_on_UI_zoom"]
[connection signal="change_area_size" from="SimpleUI" to="." method="_on_UI_change_area_size"]
[connection signal="change_area_type" from="SimpleUI" to="." method="_on_UI_change_area_type"]
[connection signal="change_field_strength" from="SimpleUI" to="." method="_on_UI_change_field_strength"]
[connection signal="mouse_moved" from="SimpleUI" to="." method="_on_UI_mouse_moved"]
[connection signal="reset_mouse_target" from="SimpleUI" to="." method="_on_UI_reset_mouse_target"]
[connection signal="reset_state" from="SimpleUI" to="." method="_on_UI_reset_state"]
[connection signal="rotate_area_to" from="SimpleUI" to="." method="_on_UI_rotate_area_to"]
[connection signal="update_mouse_target" from="SimpleUI" to="." method="_on_UI_update_mouse_target"]
[connection signal="zoom" from="SimpleUI" to="." method="_on_UI_zoom"]
